Missing comma fixed

--- a/add-users-and-groups.template
+++ b/add-users-and-groups.template
@@ -7,7 +7,7 @@
     "testuser": {
       "Type": "AWS::IAM::User",
       "Properties": {
-        "Path": "/"
+        "Path": "/",
         "UserName": "testuser"
       }
     },
