Added parameter "UserName"

--- a/add-users-and-groups.template
+++ b/add-users-and-groups.template
@@ -15,7 +15,8 @@
     "AdminUsers": {
       "Type": "AWS::IAM::Group",
       "Properties": {
-        "Path": "/"
+        "Path": "/",
+        "GroupName": "AdminUsers"
       }
     },
 
