Added parmaeter Password

--- a/add-users-and-groups.template
+++ b/add-users-and-groups.template
@@ -9,6 +9,9 @@
       "Properties": {
         "Path": "/",
         "UserName": "testuser"
+        "LoginProfile": { 
+          "Password": "Start123"
+	  }
       }
     },
 
